--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       padding: 6px 14px;
       font-size: 0.85rem; 
     }
+    
   </style>
 </head>
 <body>
@@ -38,16 +39,18 @@
 
         <!-- Profile image -->
         <div class="col-12 col-md-4 text-center">
-          <img src="https://picsum.photos/250" 
-               class="rounded-circle border border-3 border-light shadow-sm"
-               alt="Profile">
+          <img src="S1.jpg"
+     style="width: 150px; height: 150px; object-fit: cover;"
+     class="rounded-circle border border-3 border-light shadow-sm"
+     alt="Profile">
+
         </div>
 
         <!-- Info section -->
         <div class="col-12 col-md-8">
 
-          <h2>Student Name</h2>
-          <p class="text-muted mt-2">Junior Developer | วิทยาลัยเทคนิค</p>
+          <h2>Rittichok Somon</h2>
+          <p class="text-muted mt-2">Developer | วิทยาลัยอาชีวศึกษานครปฐม</p>
 
           <p>
             👋 สวัสดีครับ ผมเป็นนักเรียนสายไอทีที่สนใจเขียนโปรแกรม  
@@ -62,11 +65,7 @@
             <span class="skill-badge">JavaScript</span>
             <span class="skill-badge">Bootstrap</span>
             <span class="skill-badge">Python</span>
-            <span class="skill-badge">noob</span>
-            <span class="skill-badge">noob</span>
-            <span class="skill-badge">noob</span>
-            <span class="skill-badge">noob</span>
-            <span class="skill-badge">noob</span>
+
           </div>
 
           <!-- Buttons -->
