--- a/index.html
+++ b/index.html
@@ -1,85 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Developer Portfolio Card (Light)</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Developer Portfolio Card (Light)</title>
 
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <style>
-    body {
-      background: #3f92ff;
-      color: #333;
-    }
-    .card {
-      background: #c7ff58;
-      border-radius: 12px;
-    }
-    .skill-badge {
-      background: #ffffff;
-      color: #333;
-      border-radius: 20px;
-      padding: 6px 14px;
-      font-size: 0.85rem; 
-    }
-    
-  </style>
-</head>
-<body>
+    <style>
+      body {
+        background: #3f92ff;
+        color: #333;
+      }
+      .card {
+        background: #c7ff58;
+        border-radius: 12px;
+      }
+      .skill-badge {
+        background: #ffffff;
+        color: #333;
+        border-radius: 20px;
+        padding: 6px 14px;
+        font-size: 0.85rem;
+      }
+      .skill-html {
+        background: #ff0202;
+        color: white;
+      }
 
-  <div class="container py-5">
-    <h2 class="text-center mb-4">Programmer Portfolio</h2>
+      .skill-css {
+        background: #0080ff;
+        color: white;
+      }
 
-    <div class="card shadow p-4">
+      .skill-js {
+        background: #ffb326;
+        color: #333;
+      }
 
-      <div class="row g-4 align-items-center">
+      .skill-bootstrap {
+        background: #553fff;
+        color: white;
+      }
 
-        <!-- Profile image -->
-        <div class="col-12 col-md-4 text-center">
-          <img src="S1.jpg"
-     style="width: 300px; height: 300px; object-fit: cover;"
-     class="rounded-circle border border-3 border-light shadow-sm"
-     alt="Profile">
+      .skill-python {
+        background: #00ffb7;
+        color: #333;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container py-5">
+      <h2 class="text-center mb-4">Programmer Portfolio</h2>
 
-        </div>
-
-        <!-- Info section -->
-        <div class="col-12 col-md-8">
-
-          <h2>Rittichok Somon</h2>
-          <p class="text-muted mt-2">Developer | วิทยาลัยอาชีวศึกษานครปฐม</p>
-
-          <p>
-            👋 สวัสดีครับ ผมเป็นนักเรียนสายไอทีที่สนใจเขียนโปรแกรม  
-            ชอบทำเว็บแอป และกำลังเรียนรู้ JavaScript, Node.js, Python
-          </p>
-
-          <!-- Skills -->
-          <h5 class="mt-3 mb-2">Skills</h5>
-          <div class="d-flex flex-wrap gap-2 mb-3">
-            <span class="skill-badge">HTML</span>
-            <span class="skill-badge">CSS</span>
-            <span class="skill-badge">JavaScript</span>
-            <span class="skill-badge">Bootstrap</span>
-            <span class="skill-badge">Python</span>
-
+      <div class="card shadow p-4">
+        <div class="row g-4 align-items-center">
+          <!-- Profile image -->
+          <div class="col-12 col-md-4 text-center">
+            <img
+              src="S1.jpg"
+              style="width: 150px; height: 150px; object-fit: cover"
+              class="rounded-circle border border-3 border-light shadow-sm"
+              alt="Profile"
+            />
           </div>
 
-          <!-- Buttons -->
-          <div class="d-flex gap-2">
-            <a href="#" class="btn btn-primary">View Projects</a>
-            <a href="#" class="btn btn-outline-secondary">GitHub</a>
-          </div>
+          <!-- Info section -->
+          <div class="col-12 col-md-8">
+            <h2>Rittichok Somon</h2>
+            <p class="text-muted mt-2">Developer | วิทยาลัยอาชีวศึกษานครปฐม</p>
 
+            <p>
+              👋 สวัสดีครับ ผมเป็นนักเรียนสายไอทีที่สนใจเขียนโปรแกรม
+              ชอบทำเว็บแอป และกำลังเรียนรู้ JavaScript, Node.js, Python
+            </p>
+
+            <!-- Skills -->
+            <h5 class="mt-3 mb-2">Skills</h5>
+            <div class="d-flex flex-wrap gap-2 mb-3">
+              <span class="skill-badge skill-html">HTML</span>
+              <span class="skill-badge skill-css">CSS</span>
+              <span class="skill-badge skill-js">JavaScript</span>
+              <span class="skill-badge skill-bootstrap">Bootstrap</span>
+              <span class="skill-badge skill-python">Python</span>
+            </div>
+
+            <!-- Buttons -->
+            <div class="d-flex gap-2">
+              <a href="#" class="btn btn-primary">View Projects</a>
+              <a href="#" class="btn btn-outline-secondary">GitHub</a>
+            </div>
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
-
-</body>
+  </body>
 </html>
-
