--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Developer Portfolio Card (Light)</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Ponnala&display=swap" rel="stylesheet">
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +16,9 @@
       body {
         background: #3f92ff;
         color: #333;
+        font-family: "Charm", cursive;
+  font-weight: 400;
+  font-style: normal;
       }
       .card {
         background: #c7ff58;
@@ -98,4 +104,5 @@
     </div>
   </body>
 </html>
+
 
